# ultrustar

./: .gitignore  Cargo.toml  README.md  TODO.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.cargo/: config  config.toml
.github/workflows/: ci.yml  rustdoc.yml
checkit/: all.html  fn.main.html  fn.run_checks.html  index.html  macro.new_check!.html  macro.new_check.html  sidebar-items.js  struct.CheckBuild.html  struct.CheckClippy.html  struct.CheckDocs.html  struct.CheckFmt.html  struct.CheckGitClean.html  struct.CheckRegistry.html  struct.CheckTests.html  struct.CheckWasm.html  struct.Cli.html  trait.Check.html
gl_generator_websys/: all.html  enum.Api.html  enum.Exts.html  enum.Member.html  enum.NamedType.html  enum.Primitive.html  enum.TypeKind.html  index.html  sidebar-items.js  struct.Argument.html  struct.Attribute.html  struct.Callback.html  struct.Const.html  struct.Dictionary.html  struct.Enum.html  struct.Field.html  struct.Interface.html  struct.Mixin.html  struct.Operation.html  struct.Registry.html  struct.StdwebGenerator.html  struct.Type.html  struct.TypeIter.html  struct.VisitOptions.html  struct.WebSysGen.html  trait.Generator.html
implementors/argh/: trait.FromArgs.js  trait.SubCommand.js  trait.SubCommands.js  trait.TopLevelCommand.js
implementors/checkit/: trait.Check.js
implementors/gl_generator_websys/: trait.Generator.js
implementors/ultrustar_core/: trait.SettingsTrait.js
src/anyhid/: Cargo.toml  README.md
src/checkit/: main.rs.html
src/egui_anyhid_gl/: Cargo.toml  README.md
src/gl_generator_websys/: Cargo.toml  README.md  compat.rs.html  dicts.rs.html  features.rs.html  interfaces.rs.html  lib.rs.html  types.rs.html
src/gl_generator_websys/runtime/: mod.rs.html
src/gl_generator_websys/runtime/patches/: mod.rs.html
src/gl_generator_websys/src/: compat.rs  dicts.rs  features.rs  interfaces.rs  lib.rs  types.rs
src/gl_generator_websys/src/runtime/: README.md  constants.rs  mod.rs  polyfills.rs  prelude.rs
src/gl_generator_websys/src/runtime/patches/: buffer_data.rs  buffer_sub_data.rs  get_attached_shaders.rs  get_framebuffer_attachment_parameter.rs  get_parameter.rs  get_program_info_log.rs  get_shader_info_log.rs  get_shader_source.rs  get_vertex_attrib.rs  mod.rs  shader_source.rs
src/proc_macro_with_gl_context/: Cargo.toml
src/ultrustar/: Cargo.toml  README.md  build.rs  core.rs.html  main.rs.html
src/ultrustar/gfx/: mod.rs.html
src/ultrustar/gfx/gl/: es2.rs.html  mod.rs.html  utils.rs.html
src/ultrustar/model/: library.rs.html  mod.rs.html
src/ultrustar/platform/: impl_generic.rs.html  mod.rs.html
src/ultrustar/platform/audio/: cpal.rs.html  mod.rs.html
src/ultrustar/res/ultrastar-songs-libre-3/: README.md
src/ultrustar/res/ultrastar-songs-libre-3/Joshua Morin - On the run/: Joshua Morin - On the run.txt
src/ultrustar/res/ultrastar-songs-libre-3/Thor - Free Software Song/: README  Thor - Free Software Song.txt
src/ultrustar/src/: core.rs  lib.rs  main.rs
src/ultrustar/src/gfx/: mod.rs
src/ultrustar/src/gfx/gl/: es2.rs  mod.rs  utils.rs
src/ultrustar/src/gfx/gl/shaders/: frag.glsl  vert.glsl
src/ultrustar/src/model/: library.rs  mod.rs
src/ultrustar/src/platform/: generic.rs  impl_generic.rs  impl_web.rs  mod.rs  web.rs
src/ultrustar/src/platform/audio/: cpal.rs  mod.rs
src/ultrustar/src/platform/web/: mod.rs
src/ultrustar/src/ui/: mod.rs
src/ultrustar/ui/: mod.rs.html
src/ultrustar_core/: core.rs.html  lib.rs.html
src/wasm/: main.rs.html
src/webgl_gen_websys2gles/: Cargo.toml
src/webgl_generator_websys/: Cargo.toml
src/websys2gles2/: Cargo.toml  build.rs
src/websys_gles2/: Cargo.toml  README.md  build.rs  lib.rs.html  webgl_bindings.rs.html
src/websys_gles2/src/: lib.rs
ultrustar/: all.html  fn.main.html  index.html  sidebar-items.js
ultrustar/core/: enum.Signals.html  fn.run.html  index.html  sidebar-items.js  struct.User.html  struct.UserData.html  trait.SettingsTrait.html  type.Audio.html  type.Event.html  type.EventLoop.html  type.Renderer.html  type.Window.html
ultrustar_core/: all.html  enum.Signals.html  fn.run.html  index.html  sidebar-items.js  struct.User.html  struct.UserData.html  trait.SettingsTrait.html  type.Event.html  type.EventLoop.html  type.Window.html
ultrustar_core/core/: enum.Signals.html  fn.run.html  struct.User.html  struct.UserData.html  trait.SettingsTrait.html  type.Event.html  type.EventLoop.html  type.Window.html
ultrustar_core/gfx/: index.html  sidebar-items.js  trait.Renderer.html
ultrustar_core/model/: index.html  sidebar-items.js  struct.GameState.html  struct.Library.html  struct.Player.html  (+2 more)
wasm/: all.html  enum.CliSubcommands.html  fn.build.html  fn.main.html  fn.project_root.html  fn.serve.html  fn.target_dir.html  index.html  sidebar-items.js  struct.Cli.html  struct.CliServe.html
websys_gles2/: all.html  constant.ACTIVE_ATTRIBUTES.html  constant.ACTIVE_TEXTURE.html  constant.ACTIVE_UNIFORMS.html  constant.ALIASED_LINE_WIDTH_RANGE.html  constant.ALIASED_POINT_SIZE_RANGE.html  constant.ALPHA.html  constant.ALPHA_BITS.html  constant.ALWAYS.html  constant.ARRAY_BUFFER.html  constant.ARRAY_BUFFER_BINDING.html  constant.ATTACHED_SHADERS.html  constant.BACK.html  constant.BLEND.html  constant.BLEND_COLOR.html  constant.BLEND_DST_ALPHA.html  constant.BLEND_DST_RGB.html  constant.BLEND_EQUATION.html  constant.BLEND_EQUATION_ALPHA.html  constant.BLEND_EQUATION_RGB.html  constant.BLEND_SRC_ALPHA.html  constant.BLEND_SRC_RGB.html  constant.BLUE_BITS.html  constant.BOOL.html  constant.BOOL_VEC2.html  constant.BOOL_VEC3.html  constant.BOOL_VEC4.html  constant.BROWSER_DEFAULT_WEBGL.html  constant.BUFFER_SIZE.html  constant.BUFFER_USAGE.html  constant.BYTE.html  constant.CCW.html  constant.CLAMP_TO_EDGE.html  constant.COLOR_ATTACHMENT0.html  constant.COLOR_BUFFER_BIT.html  constant.COLOR_CLEAR_VALUE.html  constant.COLOR_WRITEMASK.html  constant.COMPILE_STATUS.html  constant.COMPRESSED_TEXTURE_FORMATS.html  constant.CONSTANT_ALPHA.html  (+426 more)
xtask/: README.md
xtask/wasm/: Cargo.toml
xtask/wasm/src/: main.rs
(+635 files in other folders)
