[package]
name = "gl_generator_websys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2"
heck = "0.4"
lazy_static = "1.4"
webgl_generator = "0.2"

[dev-dependencies]
gl = "0.14"
proc_macro_with_gl_context = { path = "../proc_macro_with_gl_context", version = "0.1.0" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlContextAttributes",
  "WebGlContextEvent",
  "WebGlFramebuffer",
  "WebGlPowerPreference",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlShaderPrecisionFormat",
  "WebGlTexture",
  "WebGlUniformLocation",
] }

[features]
no-unsafe = []
