[package]
name = "ultrustar"
version = "0.1.0"
edition = "2021"
default-run = "ultrustar"

[lib]
name = "ultrustar_core"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ultrustar"
path = "src/main.rs"

[dependencies]
ultrastar-txt = { version = "0.1.3", features = ["serde"] }
# Error propagation
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
# Audio
cpal = "0.13"
# Game controllers
gilrs = { version = "0.8", features = ["wasm-bindgen"] }
# Windowing + Event Loop
winit = "0.26"
# UI
# FIXME next egui-winit version should be compatible with wasm
egui = { git = "https://github.com/emilk/egui.git", rev = "01015ac94cfb6f259f649c35b1ed16cfe2e8543b" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "01015ac94cfb6f259f649c35b1ed16cfe2e8543b" }
dark-light = { git = "https://github.com/frewsxcv/rust-dark-light.git", rev="cd9a389" }
# GFX
nalgebra-glm = "0.16"
# Settings
serde = "1.0"
serde_json = "1.0"
whoami = "1.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.14"
glutin = "0.28"
directories = "4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
websys_gles2 = { path = "../websys_gles2", version = "0.1.0", features = ["no-unsafe"] }
console_error_panic_hook = "0.1"
console_log = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "Node",
  "Storage",
  "Window"
]}
