[package]
name = "websys2gles2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlContextAttributes",
  "WebGlContextEvent",
  "WebGlFramebuffer",
  "WebGlPowerPreference",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlShaderPrecisionFormat",
  "WebGlTexture",
  "WebGlUniformLocation",
] }

[build-dependencies]
webgl_gen_websys2gles = { path = "../webgl_gen_websys2gles", version = "0.1.0" }
