[package]
name = "websys_gles2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
static_assertions = "1.1"
proc_macro_with_gl_context = { path = "../proc_macro_with_gl_context", version = "0.1.0" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlContextAttributes",
  "WebGlContextEvent",
  "WebGlFramebuffer",
  "WebGlPowerPreference",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlShaderPrecisionFormat",
  "WebGlTexture",
  "WebGlUniformLocation",
] }

[build-dependencies]
gl_generator_websys = { path = "../gl_generator_websys", version = "0.1.0" }

[features]
no-unsafe = ["gl_generator_websys/no-unsafe"]
