[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
wasm-bindgen-cli-support = "0.2"
xshell = "0.1"

actix-web = { version = "3.3", optional = true }
actix-files = { version = "0.5", optional = true }

[features]
default = ["server"]
server = ["actix-web", "actix-files"]
